fixed skillDiv spacing

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header h4{
 
 /* skills section css */
 .skillDiv {
-    height: 75vh;
+    height: 60vh;
     width: 0vw;;
 }
 
